# adcode

./: .gitignore  README.md  fetch.py  main.py  pyproject.toml  update_adcode.py
htmls/: preview.www.mca.gov.cn___article___sj___xzqh___2020___2020___202101041104.html
