[tool.poetry]
name = "adcode"
version = "0.1.0"
description = ""
authors = ["Waket Zheng <waketzheng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
redis = "^5.0.8"
fake-useragent = "^1.5.1"
pyquery = "^2.0.1"
beautifulsoup4 = "^4.12.3"


[tool.poetry.group.dev.dependencies]
fast-dev-cli = "^0.9.10"
types-requests = "^2.32.0.20240914"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
